@@ -9,16 +9,16 @@ OPENSSL_SITE:=http://www.openssl.org/source
 OPENSSL_TARGET_ARCH=generic32
 
 # Some architectures are optimized in OpenSSL
-ifeq ($(BR2_ARCH),avr32)
+ifeq ($(ARCH),avr32)
 OPENSSL_TARGET_ARCH=avr32
 endif
-ifeq ($(BR2_ARCH),ia64)
+ifeq ($(ARCH),ia64)
 OPENSSL_TARGET_ARCH=ia64
 endif
-ifeq ($(BR2_ARCH),powerpc)
+ifeq ($(ARCH),powerpc)
 OPENSSL_TARGET_ARCH=ppc
 endif
-ifeq ($(BR2_ARCH),x86_64)
+ifeq ($(ARCH),"x86_64")
 OPENSSL_TARGET_ARCH=x86_64
 endif
 
